chore: rename page title and and met tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Browser-tag</title>
+    <meta name="description" content="This project takes the number of posts and their associated tags and allows them to be sorted in ascending or descending order by alphabet or number of posts." />
+    <meta name="author" content="Mateusz Zasada" />
   </head>
   <body>
     <div id="root"></div>
